Fixed chatbot message visibility issue

--- a/site/frontend/src/Components/Chatbot/Chatbot.css
+++ b/site/frontend/src/Components/Chatbot/Chatbot.css
@@ -14,3 +14,14 @@
     bottom: 2%;
     right: 2%;
 }
+.chatbotTextbox{
+    height: 80%;
+    overflow: scroll;
+}
+li{
+    list-style-type: none;
+}
+ul{
+    margin: 0;
+    padding: 1px;
+}
