--- a/site/frontend/src/Components/Navbar/Navbar.css
+++ b/site/frontend/src/Components/Navbar/Navbar.css
@@ -61,7 +61,7 @@
 .navLogin button:active{
     background: #f3f3f3;
 }
-.navLogin-count{
+.navLoginCount{
     width: 22px;
     height: 22px;
     display: flex;
